# ai_dventure

./: .gitignore  .mise.toml  Cargo.toml  LICENSE  README.md  Taskfile.yml  config.yml.example  crates.js  help.html  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yaml  docs.yml  release.yml
ai_dventure/: all.html  fn.check_api_key.html  fn.main.html  index.html  sidebar-items.js  struct.Args.html
ai_dventure/ai_request/: index.html  sidebar-items.js  struct.AiRequest.html  struct.ApiResponse.html  struct.ChatRequest.html  struct.Choice.html  struct.GameResponse.html  struct.Message.html  struct.ResponseFormat.html
ai_dventure/config/: fn.default_base_url.html  fn.default_model.html  fn.default_themes.html  index.html  sidebar-items.js  struct.ApiConfig.html  struct.Config.html  struct.GameConfig.html  struct.PromptsConfig.html
ai_dventure/game_engine/: index.html  sidebar-items.js  struct.GameEngine.html
ai_dventure/game_prompt/: index.html  sidebar-items.js  struct.GamePrompt.html
ai_dventure/game_state/: index.html  struct.GameState.html
ai_dventure/gpt_model/: index.html  sidebar-items.js  struct.GptModel.html
search.desc/ai_dventure/: ai_dventure-desc-0-.js
src/: ai_request.rs  config.rs  game_engine.rs  game_prompt.rs  game_state.rs  gpt_model.rs  main.rs
src/ai_dventure/: ai_request.rs.html  config.rs.html  game_engine.rs.html  game_prompt.rs.html  game_state.rs.html  gpt_model.rs.html  main.rs.html
tasks/: Taskfile.docker.yml  Taskfile.rust.yml
trait.impl/clap_builder/derive/: trait.Args.js  trait.CommandFactory.js  (+2 more)
(+17 files in other folders)
